[[bin]]
name = "wheelhoss-files-list-include-python-source-files"
path = "src/bin/files-list-include-python-source-files.rs"

[dependencies]
fs3 = "0.5"

[dev-dependencies]
file_diff = "1"
pretty_assertions = "1"
tempfile = "3"

[package]
categories = ["development-tools::build-utils"]
description = "A library and tool to help package applications for Sandstorm"
edition = "2018"
keywords = ["sandstorm"]
license = "MIT OR Apache-2.0"
name = "wheelhoss"
readme = "README.md"
version = "0.1.3"
